--- a/Application/Admin/View/Public/base.html
+++ b/Application/Admin/View/Public/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{$meta_title}|WeiPHP管理平台</title>
+    <title>{$meta_title}|大学生管家</title>
     <link href="__ROOT__/Public/favicon.ico" type="image/x-icon" rel="shortcut icon">
     <link rel="stylesheet" type="text/css" href="__CSS__/base.css?v={:SITE_VERSION}" media="all">
     <link rel="stylesheet" type="text/css" href="__CSS__/common.css?v={:SITE_VERSION}" media="all">
