百度定位 初始化

--- a/Application/Home/View/default/Addons/add.html
+++ b/Application/Home/View/default/Addons/add.html
@@ -194,6 +194,10 @@
                        </div>
                     </div>
                   </case>
+                    <!--20170714 百度地图定位-->
+                    <case value="baidumap">
+                        {:hook('BaiduMap', array('name'=>$field['name'],'value'=>$field['value']))}
+                    </case>
                   <case value="users">
                         <div class="controls">
                             <div id="userList" class="common_add_list fl">
