--- a/Addons/UserCenter/View/default/UserCenter/lists.html
+++ b/Addons/UserCenter/View/default/UserCenter/lists.html
@@ -19,7 +19,7 @@
               </select>
           </div>
           <div class="sleft">
-            <input type="text" placeholder="请输入昵称或标签搜索" value="{:I('nickname')}" class="search-input" name="nickname">
+            <input type="text" placeholder="请输入昵称或手机号搜索" value="{:I('nickname')}" class="search-input" name="nickname">
             <a url="{:addons_url('UserCenter://UserCenter/lists',$get_param)}" id="search" href="javascript:;" class="sch-btn"><i class="btn-search"></i></a> </div>
         </div>
         <!-- 多维过滤 --> 
