--- a/Addons/UserCenter/View/default/UserAgent/lists.html
+++ b/Addons/UserCenter/View/default/UserAgent/lists.html
@@ -4,26 +4,8 @@
     <section id="contents"> <include file="Addons/_nav" />
       <div class="table-bar">
         <div class="fl">
-          <div class="tools"> <a href="javascript:void(0);" class="btn setting_group">设置用户组</a> &nbsp;<a href="javascript:void(0);" class="btn send_salary">批量发工资</a> &nbsp; <a href="{:U ( 'Home/AuthGroup/export' )}" class="btn">导出用户</a> &nbsp;
-          <if condition="$syc_wechat"><a href="{:U('syc_auth_group')}" class="btn tongbu">一键同步微信公众号粉丝</a> &nbsp;</if> 
           </div>
         </div>
-        <!-- 高级搜索 -->
-        <div class="search-form fr cf">
-          <div class="sleft" style="margin-right:10px;">
-              <select name="group" style="border:none; padding:4px; margin:0;">
-              <option value="{:addons_url('UserCenter://UserCenter/lists',array('group_id'=>0))}" <eq name="$group_id" value="0">selected</eq> >全部用户</option>
-                  <volist name="auth_group" id="vo">
-                      <option value="{:addons_url('UserCenter://UserCenter/lists',array('group_id'=>$vo['id']))}" <eq name="vo['id']" value="$group_id">selected</eq> >{$vo.title}</option>
-                  </volist>
-              </select>
-          </div>
-          <div class="sleft">
-            <input type="text" placeholder="请输入昵称或标签搜索" value="{:I('nickname')}" class="search-input" name="nickname">
-            <a url="{:addons_url('UserCenter://UserCenter/lists',$get_param)}" id="search" href="javascript:;" class="sch-btn"><i class="btn-search"></i></a> </div>
-        </div>
-        <!-- 多维过滤 --> 
-      </div>
       <!-- 数据列表 -->
       <div class="data-table">
         <div class="table-striped">
@@ -41,7 +23,6 @@
                 <th>操作</th>
               </tr>
             </thead>
-            
             <!-- 列表 -->
             <tbody>
               <volist name="list_data" id="vo">
@@ -55,10 +36,9 @@
                  <!-- <td>{$vo.tag_titles}</td>-->
                   <td>
                   <a href="{:addons_url('UserCenter://UserCenter/detail',array('uid'=>$vo[uid]))}" target="_self">详细资料</a> 
-                  <a href="{:addons_url('UserCenter://UserCenter/edit',array('uid'=>$vo[uid]))}" target="_self">编辑</a>
-               <!--   <a href="{:U('Home/CreditData/lists',array('uid'=>$vo[uid]))}" target="_self">积分记录</a>-->
+                  <!--<a href="{:addons_url('UserCenter://UserCenter/edit',array('uid'=>$vo[uid]))}" target="_self">编辑</a>-->
+              <!--    <a href="{:U('Home/CreditData/lists',array('uid'=>$vo[uid]))}" target="_self">积分记录</a>-->
                   <a href="javascript:void(0);" class="set_remark" rel="{$vo.uid}">备注</a>
-                  
                   </td>
                 </tr>
               </volist>
