--- a/Addons/Job/View/default/Job/lists.html
+++ b/Addons/Job/View/default/Job/lists.html
@@ -30,11 +30,11 @@
                 <div class="search-form fr cf">
                     <div class="sleft" style="margin-right:20px;">
                         <select name="category_id" style="border:none; padding:4px; margin:0;">
-                            <option value="{:addons_url('Job://Job/lists',array('job_type'=>''))}"
-                            <eq name="$category_id" value="0">selected</eq>
+                            <option value="{:addons_url('Job://Job/lists',array('category_id'=>'110'))}"
+                            <eq name="$category_id" value="110">selected</eq>
                             >全部分类</option>
                             <volist name="category_data" id="vo">
-                                <option value="{:addons_url('Job://Job/lists',array('job_type'=>$vo['id']))}"
+                                <option value="{:addons_url('Job://Job/lists',array('category_id'=>$vo['id']))}"
                                 <eq name="vo['id']" value="$category_id">selected</eq>
                                 >{$vo.title}
                                 </option>
