--- a/Addons/Job/View/default/JobApply/lists.html
+++ b/Addons/Job/View/default/JobApply/lists.html
@@ -1,117 +1,126 @@
-<extend name="Base/common" />
+<extend name="Base/common"/>
 <block name="body">
-  <div class="span9 page_message">
-    <section id="contents"> 
-      <include file="Addons/_nav" /> 
-      <if condition="$add_button || $del_button || $search_button || !empty($top_more_button)">   
-      <div class="table-bar">
-          <div class="fl">
-              <empty name="model.extend">
-                  <div class="tools">
-                      <if condition="$add_button">
-                          <php> $add_url || $add_url = U('add?model='.$model['id'], $get_param);</php>
-                          <a class="btn" href="{$add_url}">新 增</a></if>
-                      <if condition="$del_button">
-                          <php> $del_url || $del_url = U('del?model='.$model['id'], $get_param);</php>
-                          <button class="btn ajax-post confirm" target-form="ids" url="{$del_url}">删 除</button>
-                      </if>
-                      <volist name="top_more_button" id="vo">
-                          <if condition="$vo[is_buttion]">
-                              <button class="btn {$vo.class}" target-form="ids" url="{$vo.url}">{$vo.title}
-                              </button>
-                              <else/>
-                              <a class="btn" href="{$vo.url}">{$vo.title}</a>
-                          </if>
-                          &nbsp;
-                      </volist>
-                  </div>
-              </empty>
-          </div>
-            <!-- 高级搜索 -->
-            <div class="search-form fr cf">
-                <div class="sleft" style="margin-right:20px;">
-                   <!-- <select name="category_id" style="border:none; padding:4px; margin:0;">
-                        <option value="{:addons_url('Job://Job/lists',array('category_id'=>'110'))}"
-                        <eq name="$category_id" value="110">selected</eq>
-                        >全部分类</option>
-                        <volist name="category_data" id="vo">
-                            <option value="{:addons_url('Job://Job/lists',array('category_id'=>$vo['id']))}"
-                            <eq name="vo['id']" value="$category_id">selected</eq>
-                            >{$vo.title}
-                            </option>
-                        </volist>
-                    </select>-->
-                 <!--   <input type="text" placeholder="请输入大学搜索" value="{:I('school')}" class="search-input"
-                           name="school">
-                    <a url="{:addons_url('Job://JobApply/lists',$get_param)}" id="searchSchool"
-                       href="javascript:;" class="sch-btn"><i class="btn-search"></i></a>-->
+    <div class="span9 page_message">
+        <section id="contents">
+            <include file="Addons/_nav"/>
+            <if condition="$add_button || $del_button || $search_button || !empty($top_more_button)">
+                <div class="table-bar">
+                    <div class="fl">
+                        <empty name="model.extend">
+                            <div class="tools">
+                                <if condition="$add_button">
+                                    <php> $add_url || $add_url = U('add?model='.$model['id'], $get_param);</php>
+                                    <a class="btn" href="{$add_url}">新 增</a></if>
+                                <if condition="$del_button">
+                                    <php> $del_url || $del_url = U('del?model='.$model['id'], $get_param);</php>
+                                    <button class="btn ajax-post confirm" target-form="ids" url="{$del_url}">删 除
+                                    </button>
+                                </if>
+                                <volist name="top_more_button" id="vo">
+                                    <if condition="$vo[is_buttion]">
+                                        <button class="btn {$vo.class}" target-form="ids" url="{$vo.url}">{$vo.title}
+                                        </button>
+                                        <else/>
+                                        <a class="btn" href="{$vo.url}">{$vo.title}</a>
+                                    </if>
+                                    &nbsp;
+                                </volist>
+                            </div>
+                        </empty>
+                    </div>
+                    <!--&lt;!&ndash; 高级搜索 &ndash;&gt;-->
+                    <!--<if condition="$search_button">-->
+                    <!--<div class="search-form fr cf">-->
+                    <!--<div class="sleft">-->
+                    <!--<php> $get_param[model]=$model['name']; $search_url || $search_url = addons_url($_REQUEST ['_addons'].'://'.$_REQUEST ['_controller'].'/lists', $get_param);</php>-->
+                    <!--<php>empty($search_key) && $search_key=$model['search_key'];empty($search_key) && $search_key='title';</php>-->
+                    <!--<input type="text" name="{$search_key}" class="search-input" value="{:I($search_key)}" placeholder="{$placeholder}">-->
+                    <!--&lt;!&ndash;<input type="text" name="{$search_key1}" class="search-input" value="{:I($search_key1)}" placeholder="{$placeholder1}">&ndash;&gt;-->
+                    <!--<a class="sch-btn" href="javascript:;" id="search" url="{$search_url}"><i class="btn-search"></i></a> </div>-->
+                    <!--</div>-->
+                    <!--</if>-->
+                    <!-- 多维过滤 -->
+                    <form class="muti_search cf" id="myForm" target="_self">
+                        <div class="" style="line-height: 30px;">
+                            <span>请输入学校：</span>
+                            <input type="text" name="school" id="school" class="" value="{$school}">
+                            <span>请输入职位搜索：</span>
+                            <input type="text" name="job_str" id="job_str" value="{$job_str}">
+                            <!-- <a class="sort " href="#" title="排序">排序:高->低</a> -->
+                            <button type="button" class="sch-btn btn" href="javascript:;" url="{:addons_url('JobApply://JobApply/lists',$get_param)}" id="search">搜索</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="sleft">
-                    <input type="text" placeholder="请输入大学搜索" value="{:I('school')}" style="margin-right: 20px;" class="search-input"
-                           name="school">
-                    <input type="text" placeholder="请输入职位名称搜索" value="{:I('job_str')}" class="search-input"
-                           name="job_str">
-                    <a url="{:addons_url('Job://JobApply/lists',$get_param)}" id="search"
-                       href="javascript:;" class="sch-btn"><i class="btn-search"></i></a>
+            </if>
+            <!-- 数据列表 -->
+            <div class="data-table">
+                <div class="table-striped">
+                    <table cellspacing="1">
+                        <!-- 表头 -->
+                        <thead>
+                        <tr>
+                            <if condition="$check_all">
+                                <th class="row-selected row-selected"><input autocomplete="off" type="checkbox"
+                                                                             id="checkAll"
+                                                                             class="check-all regular-checkbox"><label
+                                        for="checkAll"></label></th>
+                            </if>
+                            <volist name="list_grids" id="field">
+                                <th
+                                <notempty name="field.width">width="{$field.width}%"</notempty>
+                                >{$field.title}</th>
+                            </volist>
+                        </tr>
+                        </thead>
+
+                        <!-- 列表 -->
+                        <tbody>
+                        <volist name="list_data" id="data">
+                            <tr>
+                                <if condition="$check_all">
+                                    <td><input autocomplete="off" class="ids regular-checkbox" type="checkbox"
+                                               value="{$data['id']}" name="ids[]" id="check_{$data['id']}"><label
+                                            for="check_{$data['id']}"></label></td>
+                                </if>
+                                <volist name="list_grids" id="grid">
+                                    <td>{:get_list_field($data,$grid,$model)}</td>
+                                </volist>
+                            </tr>
+                        </volist>
+                        </tbody>
+                    </table>
                 </div>
             </div>
-        </div>
-      </if>
-      <!-- 数据列表 -->
-      <div class="data-table">
-        <div class="table-striped">
-          <table cellspacing="1">
-            <!-- 表头 -->
-            <thead>
-              <tr>
-                <if condition="$check_all"><th class="row-selected row-selected"> <input autocomplete="off"  type="checkbox" id="checkAll" class="check-all regular-checkbox"><label for="checkAll"></label></th></if>
-                <volist name="list_grids" id="field">
-                  <th <notempty name="field.width">width="{$field.width}%"</notempty> >{$field.title}</th>
-                </volist>
-              </tr>
-            </thead>
-            
-            <!-- 列表 -->
-            <tbody>
-              <volist name="list_data" id="data">
-                <tr>
-                  <if condition="$check_all"><td><input autocomplete="off"  class="ids regular-checkbox" type="checkbox" value="{$data['id']}" name="ids[]" id="check_{$data['id']}"><label for="check_{$data['id']}"></label></td></if>
-                  <volist name="list_grids" id="grid">
-                    <td>{:get_list_field($data,$grid,$model)}</td>
-                  </volist>
-                </tr>
-              </volist>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <div class="page"> {$_page|default=''} </div>
-    </section>
-  </div>
+            <div class="page"> {$_page|default=''}</div>
+        </section>
+    </div>
 </block>
-<block name="script"> 
-  <script type="text/javascript">
-$(function(){
-	//搜索功能
-  $("#search").click(function(){
-    var url = $(this).attr('url');
-    var str = $('.search-input').val()
-        var query  = $('.search-input').attr('name')+'='+str.replace(/(^\s*)|(\s*$)/g,"");
+<block name="script">
+    <script type="text/javascript">
+        $(function () {
+            //搜索功能
+            $("#search").click(function () {
+                var url = $(this).attr('url');
+                console.log(url);
+                var school = $("#school").value();
+                var job_str = $("#job_str").value();
+                var querySchool = 'school'+ '=' + school.replace(/(^\s*)|(\s*$)/g, "");
+                var jobStr = 'job_str'+ '=' + job_str.replace(/(^\s*)|(\s*$)/g, "");
+                var query=querySchool+'&'+jobStr;
+                if (url.indexOf('?') > 0) {
+                    url += '&' + query;
+                } else {
+                    url += '?' + query;
+                }
+                window.location.href = url;
+            });
 
-        if( url.indexOf('?')>0 ){
-            url += '&' + query;
-        }else{
-            url += '?' + query;
-        }
-    window.location.href = url;
-  }); 
-
-    //回车自动提交
-    $('.search-form').find('input').keyup(function(event){
-        if(event.keyCode===13){
-            $("#search").click();
-        }
-    });
-})
-</script> 
+            //回车自动提交
+            $('.search-form').find('input').keyup(function (event) {
+                if (event.keyCode === 13) {
+                    $("#search").click();
+                }
+            });
+        })
+    </script>
 </block>
