--- a/Addons/UserCenter/View/default/UserCollect/lists.html
+++ b/Addons/UserCenter/View/default/UserCollect/lists.html
@@ -32,46 +32,21 @@
         </div>-->
         </if>
         <!-- 多维过滤 -->
-        <notempty name="muti_search">
-        <form class="muti_search cf">
-          <div class="" style="line-height: 30px;">
-          <volist name='muti_search' id='vo'>
-          <switch name="vo.type">
-                <case value="select">
-                    <span>{$vo.title}：</span>
-                    <select name="{$vo.name}" class="search-input input-small">
-                    <volist name='vo.options' id='option'>
-                    <option value="{$option.value}" <eq name='option.default_value' value='option.value'>selected</eq> >{$option.title}</option>
-                    </volist>                    
-                    </select>
-                </case>
-                <case value="datetime">
-                    <span>{$vo.title}：</span>
-             <input type="datetime" name="start_time" class="search-input date input-small" value="{$vo.start_time}" placeholder="请选择时间">
-             <span>至</span>
-             <input type="datetime" name="end_time" class="search-input date input-small" value="{$vo.end_time}" placeholder="请选择时间">
-                </case>
-                <case value="checkbox">
-                    <span>{$vo.title}：</span>
-                    <volist name='vo.options' id='option'>
-                    <input autocomplete="off"  type="checkbox" name="{$option.name}" class="" value="{$option.value}" <eq name='option.default_value' value='option.value'>checked</eq> >{$option.title}
-                    </volist>
-                </case>
-                <case value="radio">
-                    <span>{$vo.title}：</span>
-                    <volist name='vo.options' id='option'>
-                    <input type="radio" name="{$option.name}" class="" value="{$option.value}" <eq name='option.default_value' value='option.value'>checked</eq> >{$option.title}
-                    </volist>
-                </case>
-                  
-             
-            </switch>
-            </volist>
-             
-             <!-- <a class="sort " href="#" title="排序">排序:高->低</a> -->
-             <button type="button" class="sch-btn btn" href="javascript:;" id="search">搜索</button> </div>
-        </form>
-        </notempty>
+          <form class="muti_search cf" id="myForm" target="_self">
+              <span>收藏类型：</span>
+                  <input type="radio" name="ctype class="" value="0" <eq name='ctype' value='0'>checked</eq> >职位
+                  <input type="radio" name="ctype class="" value="1" <eq name='ctype' value='1'>checked</eq> >文章
+              <!--<div class="" style="line-height: 30px;">-->
+                  <!--<span>请输入学校：</span>-->
+                  <!--<input type="text" name="school" id="school" class="" value="{$school}">-->
+                  <!--<span>请输入职位搜索：</span>-->
+                  <!--<input type="text" name="job_str" id="job_str" value="{$job_str}">-->
+                  <!--&lt;!&ndash; <a class="sort " href="#" title="排序">排序:高->低</a> &ndash;&gt;-->
+              <!--</div>-->
+              <button type="button" class="sch-btn btn" href="javascript:;" url="{:addons_url('JobApply://JobApply/lists',$get_param)}" id="search">搜索</button>
+
+          </form>
+
       </div>
       </if>
       <!-- 数据列表 -->
