--- a/Addons/UserCenter/View/default/UserBondLogs/lists.html
+++ b/Addons/UserCenter/View/default/UserBondLogs/lists.html
@@ -21,30 +21,30 @@
 			</div>
           </empty>
         </div>
-        <!-- 高级搜索 -->
-        <if condition="$search_button">
-        <div class="search-form fr cf">
-          <div class="sleft">
-            <php> $get_param[model]=$model['name']; $search_url || $search_url = addons_url($_REQUEST ['_addons'].'://'.$_REQUEST ['_controller'].'/lists', $get_param);</php>
-            <php>empty($search_key) && $search_key=$model['search_key'];empty($search_key) && $search_key='title';</php>
-            <input type="text" name="{$search_key}" class="search-input" value="{:I($search_key)}" placeholder="{$placeholder}">
-            <a class="sch-btn" href="javascript:;" id="search" url="{$search_url}"><i class="btn-search"></i></a> </div>
-        </div>
-        </if>
+        <!--&lt;!&ndash; 高级搜索 &ndash;&gt;-->
+        <!--<if condition="$search_button">-->
+        <!--<div class="search-form fr cf">-->
+          <!--<div class="sleft">-->
+            <!--<php> $get_param[model]=$model['name']; $search_url || $search_url = addons_url($_REQUEST ['_addons'].'://'.$_REQUEST ['_controller'].'/lists', $get_param);</php>-->
+            <!--<php>empty($search_key) && $search_key=$model['search_key'];empty($search_key) && $search_key='title';</php>-->
+            <!--<input type="text" name="{$search_key}" class="search-input" value="{:I($search_key)}" placeholder="{$placeholder}">-->
+            <!--<a class="sch-btn" href="javascript:;" id="search" url="{$search_url}"><i class="btn-search"></i></a> </div>-->
+        <!--</div>-->
+        <!--</if>-->
         <!-- 多维过滤 -->
           <form class="muti_search cf" id="myForm" target="_self">
               <div class="" style="line-height: 30px;">
-                  <span></span>
-                  <input type="datetime" name="start_time" class="search-input date input-small" value="{$vo.start_time}" placeholder="请选择时间">
+                  <span>时间筛选</span>
+                  <input type="datetime" style="width:150px;" name="start_time" id="start_time" class="search-input time input-small" value="{$start_time}" placeholder="请选择开始时间">
                   <span>至</span>
-                  <input type="datetime" name="end_time" class="search-input date input-small" value="{$vo.end_time}" placeholder="请选择时间">
+                  <input type="datetime" style="width:150px;" name="end_time" id="end_time"class="search-input time input-small" value="{$end_time}" placeholder="请选择结束时间">
 
                   <!--<span>请输入学校：</span>-->
                   <!--<input type="text" name="school" id="school" class="" value="{$school}">-->
                   <!--<span>请输入职位搜索：</span>-->
                   <!--<input type="text" name="job_str" id="job_str" value="{$job_str}">-->
                   <!-- <a class="sort " href="#" title="排序">排序:高->低</a> -->
-                  <button type="button" class="sch-btn btn" href="javascript:;" url="{:addons_url('JobApply://JobApply/lists',$get_param)}" id="search">搜索</button>
+                  <button type="button" class="sch-btn btn" href="javascript:;" url="{:addons_url('UserCenter://UserBondLogs/lists',$get_param)}" id="search">搜索</button>
               </div>
           </form>
       </div>
@@ -81,22 +81,35 @@
     </section>
   </div>
 </block>
-<block name="script"> 
-  <script type="text/javascript">
-$(function(){
-	//搜索功能
-  $("#search").click(function(){
-    var url = $(this).attr('url');
-    var str = $('.search-input').val()
-        var query  = $('.search-input').attr('name')+'='+str.replace(/(^\s*)|(\s*$)/g,"");
+<block name="script">
+    <link href="__STATIC__/datetimepicker/css/datetimepicker.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
+    <php>if(C('COLOR_STYLE')=='blue_color') echo '
+        <link href="__STATIC__/datetimepicker/css/datetimepicker_blue.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
+        ';</php>
+    <link href="__STATIC__/datetimepicker/css/dropdown.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="__STATIC__/datetimepicker/js/bootstrap-datetimepicker.js"></script>
+    <script type="text/javascript" src="__STATIC__/datetimepicker/js/locales/bootstrap-datetimepicker.zh-CN.js?v={:SITE_VERSION}" charset="UTF-8"></script>
 
-        if( url.indexOf('?')>0 ){
+    <script type="text/javascript">
+$(function(){
+    //搜索功能
+    $("#search").click(function () {
+        var url = $(this).attr('url');
+        console.log(url);
+        var start_time = $("#start_time").val();
+        var end_time = $("#end_time").val();
+        var querySchool = 'start_time'+ '=' + start_time.replace(/(^\s*)|(\s*$)/g, "");
+
+        var jobStr = 'end_time'+ '=' + end_time.replace(/(^\s*)|(\s*$)/g, "");
+        var query = querySchool+'&'+jobStr;
+        console.log(query);
+        if (url.indexOf('?') > 0) {
             url += '&' + query;
-        }else{
+        } else {
             url += '?' + query;
         }
-    window.location.href = url;
-  }); 
+        window.location.href = url;
+    });
 
     //回车自动提交
     $('.search-form').find('input').keyup(function(event){
@@ -104,7 +117,18 @@ $(function(){
             $("#search").click();
         }
     });
-
+    $('.time').datetimepicker({
+        format: 'yyyy-mm-dd hh:ii',
+        language:"zh-CN",
+        minView:0,
+        autoclose:true
+    });
+    $('.date').datetimepicker({
+        format: 'yyyy-mm-dd',
+        language:"zh-CN",
+        minView:2,
+        autoclose:true
+    });
 })
 </script> 
 </block>
