--- a/Addons/UserCenter/View/default/UserCenter/lists.html
+++ b/Addons/UserCenter/View/default/UserCenter/lists.html
@@ -7,7 +7,7 @@
                 <div class="fl">
                     <div class="tools">
                      <!--   <a href="javascript:void(0);" class="btn setting_group">设置用户组</a> &nbsp;-->
-                        <a href="javascript:void(0);" class="btn send_salary">批量发工资</a> &nbsp;
+                        <!--<a href="javascript:void(0);" class="btn send_salary">批量发工资</a> &nbsp;-->
                         <a href="{:U ( 'Home/AuthGroup/export' )}" class="btn">导出用户</a> &nbsp;
 
                     </div>
